new header and new footer

--- a/contact.html
+++ b/contact.html
@@ -16,43 +16,13 @@
 <section id="main-header">
 	<div class="main">
 		<img src="images/mail.svg" alt="Email" width="200" height="200" />
-			<div class="full-nav">
-			<nav id="nav">
-				<div class="dropdown">
-					<a class="dropbtn" href="index.html">Home</a>
-				</div>
-
-				<div class="dropdown">
-					<a class="dropbtn" href="#">Services</a>
-					<div class="dropdown-content">
-						<a class="nav-links" href="data-center-consulting.html">Data Center Consulting</a>
-						<a class="nav-links" href="cloud-consulting.html">Cloud Consulting</a>
-						<a class="nav-links" href="it-transformation.html">IT Transformation</a>
-						<a class="nav-links" href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
-						<a class="nav-links" href="network-collab.html">Network and Collaboration</a>
-						<a class="nav-links" href="compute-storage-backup.html">Compute, Storage and Backup</a>
-						<a class="nav-links" href="end-user-computing.html">End User Computing</a>
-					</div>
-				</div>
-
-				<div class="dropdown">
-					<a class="dropbtn" href="#">Solutions</a>
-					<div class="dropdown-content">
-						<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
-						<a href="cyber-security-solutions.html">Cyber Security</a>
-						<a href="unified-workplace.html">Unified Workplace</a>
-					</div>
-				</div>
-
-				<div class="dropdown">
-					<a class="dropbtn" href="products.html">Products</a>
-				</div>
-
-				<div class="dropdown">
-					<a class="dropbtn" href="contact.html">Contact</a>
-				</div>
-			</nav>
-		</div>
+		<nav id="nav">
+			<ul>
+				<li class="current"><a href="index.html">Home</a></li>
+				<li><a href="products.html">Products</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<form action="https://docs.google.com/forms/d/e/1FAIpQLScSJtsS8IhSgWqKRuJw2oazazlphHSfSBhVe_hzT10GCFch2w/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on"><ol role="list" class="ss-question-list" style="padding-left: 0;">
@@ -172,11 +142,8 @@
 						<h2><b>Contact Us</b></h2>
 					</header>
 					<ul class="social">
-						<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-						<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-						<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-						<li><a class="icon fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
-						<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
+						<li><a class="icon fa-facebook" href="https://www.facebook.com/YISPL/"><span class="label">Facebook</span></a></li>
+						<li><a class="icon fa-linkedin" href="https://www.linkedin.com/company/yashasvi-information-solutions-pvt-ltd/?originalSubdomain=in"><span class="label">LinkedIn</span></a></li>
 					</ul>
 					<ul class="contact">
 						<li>
@@ -190,10 +157,16 @@
 						<li>
 							<h3><b>Mail</b></h3>
 							<p><b><a href="#">info@yashasvi.co.in</a></b></p>
+							<p><b><a href="#">sanjeev@yashasvi.co.in</a></b></p>
+							<p><b><a href="#">niladri@yashasvi.co.in</a></b></p>
+						</li>
+						<li>
+							<h3><b>Mobile</b></h3>
+							<p><b>+91 9845009026 / +91 9108995664</b></p>
 						</li>
 						<li>
 							<h3><b>Phone</b></h3>
-							<p><b>+91-9845009026</b></p>
+							<p><b>+91 080 2649 2692</b></p>
 						</li>
 					</ul>
 				</section>
