--- a/index.html
+++ b/index.html
@@ -18,49 +18,40 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 				<section id="header" class="main-header">
-						<img src="images/main-logo.jpg" alt="yashasvi logo" class="landing" width="360" height="230" />
-						<img src="images/brush-stroke3.png" alt="brush stroke" width="1500" height="300" />
-						<h1 style="font-size: 60px; margin-top: -10%;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
-						<h3><b><i>Let's simplify..</i></b></h3>
-						<br>
-
-						<div class="full-nav">
-						<nav id="nav">
-							<div class="dropdown">
-								<a class="dropbtn" href="index.html">Home</a>
-							</div>
-
-							<div class="dropdown">
-								<a class="dropbtn" href="#">Services</a>
-								<div class="dropdown-content">
-									<a href="data-center-consulting.html">Data Center Consulting</a>
-									<a href="cloud-consulting.html">Cloud Consulting</a>
-									<a href="it-transformation.html">IT Transformation</a>
-									<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
-									<a href="network-collab.html">Network and Collaboration</a>
-									<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
-									<a href="end-user-computing.html">End User Computing</a>
-								</div>
-							</div>
-
-							<div class="dropdown">
-								<a class="dropbtn" href="#">Solutions</a>
-								<div class="dropdown-content">
-									<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
-									<a href="cyber-security-solutions.html">Cyber Security</a>
-									<a href="unified-workplace.html">Unified Workplace</a>
-								</div>
-							</div>
-
-							<div class="dropdown">
-								<a class="dropbtn" href="products.html">Products</a>
-							</div>
-
-							<div class="dropdown">
-								<a class="dropbtn" href="contact.html">Contact</a>
-							</div>
-						</nav>
+					<div class="index-des">
+						<img id="logo" src="images/main-logo.jpg" alt="yashasvi logo" width="360" height="230" />
+						<!-- <img src="images/brush-stroke3.png" alt="brush stroke" width="100%" height="300" /> -->
 					</div>
+						<h1 style="font-size: 60px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
+						<h3><b><i>Let's simplify..</i></b></h3>
+
+						<nav id="nav">
+							<ul>
+								<li class="current"><a href="index.html">Home</a></li>
+								<li>
+									<a href="#">Services</a>
+									<ul>
+										<a href="data-center-consulting.html">Data Center Consulting</a>
+										<a href="cloud-consulting.html">Cloud Consulting</a>
+										<a href="it-transformation.html">IT Transformation</a>
+										<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+										<a href="network-collab.html">Network and Collaboration</a>
+										<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
+										<a href="end-user-computing.html">End User Computing</a>
+									</ul>
+								</li>
+								<li>
+									<a href="#">Solutions</a>
+									<ul>
+										<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
+										<a href="cyber-security-solutions.html">Cyber Security</a>
+										<a href="unified-workplace.html">Unified Workplace</a>
+									</ul>
+								</li>
+								<li><a href="products.html">Products</a></li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
+						</nav>
 
 					<section id="banner">
 						<div class="focus-content">
@@ -133,7 +124,7 @@
 										</header>
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
+												<section class="box" id="box">
 													<img class="portfolio-images" width="200" height="200" src="images/network.svg" alt="Data Center Consulting" /><br>
 													<header>
 														<div class="center">
@@ -154,7 +145,7 @@
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
+												<section class="box" id="box">
 													<img class="portfolio-images" width="200" height="200" src="images/data-index.svg" alt="Cloud Consulting" /><br>
 													<header>
 														<div class="center">
@@ -176,17 +167,16 @@
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
+												<section class="box" id="box">
 													<img class="portfolio-images" width="200" height="200" src="images/cloud.svg" alt="IT Transformation" /><br>
 													<header>
 														<div class="center">
 														<h3><b>IT Transformation</b></h3>
 													</div>
-														<br>
+													<br>
 													</header>
 													<p><b>The objective of this service is to determine the “healthiness of the existing IT environment, recommend appropriate processes for service improvement and suggest areas for automation (if any)”.
 														The Scope of work for the IT infrastructure assessment is focused on the following operational towers (identified services/ functional areas).
-													<br><br>
 													</b></p>
 													<footer>
 														<div class="center">
@@ -198,13 +188,12 @@
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
+												<section class="box" id="box">
 													<img class="portfolio-images" width="200" height="200" src="images/network-index.svg" alt="Network and Collaboration" /><br>
 													<header>
 														<div class="center">
 															<h3><b>Network and Collaboration</b></h3>
 														</div>
-														<br>
 													</header>
 													<p><b>This service provides a complete blueprint of Network, Voice and Video infrastructure to organization that are building a new network or redesigning an existing Data and Voice infrastructure.
 														They work directly with your organization’s management and operations staffs to understand your network objectives in order to recommend industry best practices and the solutions and technologies that apply to your network environment.</b></p>
@@ -218,7 +207,7 @@
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
+												<section class="box" id="box">
 													<img class="portfolio-images" width="200" height="200" src="images/backup.svg" alt="Compute, Storage & Backup" /><br>
 													<header>
 														<h3><b>Compute, Storage & Backup</b></h3>
@@ -228,7 +217,6 @@
 														As part of this service Yashasvi will provide a comprehensive architecture and design of Compute, Storage and Backup environment.
 														This service is focused towards new or customers who are looking to redesigning their existing environment. Our consultants will
 														understand the business requirement, application landscape and provide a blueprint of Compute, Storage and Backup infrastructure.
-														<br><br>
 													</b></p>
 													<footer>
 														<div class="center">
@@ -240,7 +228,7 @@
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
+												<section class="box" id="box">
 													<img class="portfolio-images" width="200" height="200" src="images/security.svg" alt="Cyber Security" /><br>
 													<header>
 														<div class="center">
@@ -349,7 +337,7 @@
 								</div>
 								</div>
 					</div>
-							<div class="col-12">
+							<!-- <div class="col-12">
 								<div class="center">
 									<p><b>Clientele:</b></p>
 								</div>
@@ -427,7 +415,7 @@
 								<div class="carousel-cell">
 									<img src="assets/css/images/clients/fortigo.png" alt="Fortigo" />
 								</div>
-								</div>
+								</div> -->
 					</div>
 				</div>
 				</section>
@@ -486,11 +474,8 @@
 										<h2><b>Contact Us</b></h2>
 									</header>
 									<ul class="social">
-										<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
-										<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon fa-facebook" href="https://www.facebook.com/YISPL/"><span class="label">Facebook</span></a></li>
+										<li><a class="icon fa-linkedin" href="https://www.linkedin.com/company/yashasvi-information-solutions-pvt-ltd/?originalSubdomain=in"><span class="label">LinkedIn</span></a></li>
 									</ul>
 									<ul class="contact">
 										<li>
@@ -504,10 +489,16 @@
 										<li>
 											<h3><b>Mail</b></h3>
 											<p><b><a href="#">info@yashasvi.co.in</a></b></p>
+											<p><b><a href="#">sanjeev@yashasvi.co.in</a></b></p>
+											<p><b><a href="#">niladri@yashasvi.co.in</a></b></p>
+										</li>
+										<li>
+											<h3><b>Mobile</b></h3>
+											<p><b>+91 9845009026 / +91 9108995664</b></p>
 										</li>
 										<li>
 											<h3><b>Phone</b></h3>
-											<p><b>+91-9845009026</b></p>
+											<p><b>+91 080 2649 2692</b></p>
 										</li>
 									</ul>
 								</section>
@@ -528,7 +519,7 @@
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
+			<!-- <script src="assets/js/breakpoints.min.js"></script> -->
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
