--- a/sophos.html
+++ b/sophos.html
@@ -12,44 +12,33 @@
 			<section id="header">
 				<img class="portfolio-images" width="200" height="200" src="images/firewall.svg" alt="Sophos - Yashasvi" />
 					<h1><a href="#"><b>Sophos</b></a></h1>
-					<div class="full-nav">
 					<nav id="nav">
-
-						<div class="dropdown">
-							<a class="dropbtn" href="index.html">Home</a>
-						</div>
-
-						<div class="dropdown">
-							<a class="dropbtn" href="#">Services</a>
-							<div class="dropdown-content">
-								<a href="data-center-consulting.html">Data Center Consulting</a>
-								<a href="cloud-consulting.html">Cloud Consulting</a>
-								<a href="it-transformation.html">IT Transformation</a>
-								<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
-								<a href="network-collab.html">Network and Collaboration</a>
-								<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
-								<a href="end-user-computing.html">End User Computing</a>
-							</div>
-						</div>
-
-						<div class="dropdown">
-							<a class="dropbtn" href="#">Solutions</a>
-							<div class="dropdown-content">
-								<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
-								<a href="cyber-security-solutions.html">Cyber Security</a>
-								<a href="unified-workplace.html">Unified Workplace</a>
-							</div>
-						</div>
-
-						<div class="dropdown">
-							<a class="dropbtn" href="products.html">Products</a>
-						</div>
-
-						<div class="dropdown">
-							<a class="dropbtn" href="contact.html">Contact</a>
-						</div>
+						<ul>
+							<li class="current"><a href="index.html">Home</a></li>
+							<li>
+								<a href="#">Services</a>
+								<ul>
+									<a href="data-center-consulting.html">Data Center Consulting</a>
+									<a href="cloud-consulting.html">Cloud Consulting</a>
+									<a href="it-transformation.html">IT Transformation</a>
+									<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+									<a href="network-collab.html">Network and Collaboration</a>
+									<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
+									<a href="end-user-computing.html">End User Computing</a>
+								</ul>
+							</li>
+							<li>
+								<a href="#">Solutions</a>
+								<ul>
+									<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
+									<a href="cyber-security-solutions.html">Cyber Security</a>
+									<a href="unified-workplace.html">Unified Workplace</a>
+								</ul>
+							</li>
+							<li><a href="products.html">Products</a></li>
+							<li><a href="contact.html">Contact</a></li>
+						</ul>
 					</nav>
-				</div>
 
 				</section>
 
@@ -191,11 +180,8 @@
 										<h2><b>Contact Us</b></h2>
 									</header>
 									<ul class="social">
-										<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
-										<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon fa-facebook" href="https://www.facebook.com/YISPL/"><span class="label">Facebook</span></a></li>
+										<li><a class="icon fa-linkedin" href="https://www.linkedin.com/company/yashasvi-information-solutions-pvt-ltd/?originalSubdomain=in"><span class="label">LinkedIn</span></a></li>
 									</ul>
 									<ul class="contact">
 										<li>
@@ -209,10 +195,16 @@
 										<li>
 											<h3><b>Mail</b></h3>
 											<p><b><a href="#">info@yashasvi.co.in</a></b></p>
+											<p><b><a href="#">sanjeev@yashasvi.co.in</a></b></p>
+											<p><b><a href="#">niladri@yashasvi.co.in</a></b></p>
+										</li>
+										<li>
+											<h3><b>Mobile</b></h3>
+											<p><b>+91 9845009026 / +91 9108995664</b></p>
 										</li>
 										<li>
 											<h3><b>Phone</b></h3>
-											<p><b>+91-9845009026</b></p>
+											<p><b>+91 080 2649 2692</b></p>
 										</li>
 									</ul>
 								</section>
