--- a/products.html
+++ b/products.html
@@ -18,49 +18,40 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 				<section id="header" class="main-header">
-						<img src="images/main-logo.jpg" alt="yashasvi logo" class="landing" width="360" height="230" />
-						<img src="images/brush-stroke3.png" alt="brush stroke" width="1500" height="300" />
-						<h1 style="font-size: 60px; margin-top: -10%;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
-						<h3><b><i>Let's simplify..</i></b></h3>
-						<br>
-
-						<div class="full-nav">
-						<nav id="nav">
-							<div class="dropdown">
-								<a class="dropbtn" href="index.html">Home</a>
-							</div>
-
-							<div class="dropdown">
-								<a class="dropbtn" href="#">Services</a>
-								<div class="dropdown-content">
-									<a href="data-center-consulting.html">Data Center Consulting</a>
-									<a href="cloud-consulting.html">Cloud Consulting</a>
-									<a href="it-transformation.html">IT Transformation</a>
-									<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
-									<a href="network-collab.html">Network and Collaboration</a>
-									<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
-									<a href="end-user-computing.html">End User Computing</a>
-								</div>
-							</div>
-
-							<div class="dropdown">
-								<a class="dropbtn" href="#">Solutions</a>
-								<div class="dropdown-content">
-									<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
-									<a href="cyber-security-solutions.html">Cyber Security</a>
-									<a href="unified-workplace.html">Unified Workplace</a>
-								</div>
-							</div>
-
-							<div class="dropdown">
-								<a class="dropbtn" href="#">Products</a>
-							</div>
-
-							<div class="dropdown">
-								<a class="dropbtn" href="contact.html">Contact</a>
-							</div>
-						</nav>
+					<div class="index-des">
+						<img id="logo" src="images/main-logo.jpg" alt="yashasvi logo" width="360" height="230" />
+						<!-- <img src="images/brush-stroke3.png" alt="brush stroke" width="100%" height="300" /> -->
 					</div>
+						<h1 style="font-size: 60px;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
+						<h3><b><i>Let's simplify..</i></b></h3>
+
+						<nav id="nav">
+							<ul>
+								<li class="current"><a href="index.html">Home</a></li>
+								<li>
+									<a href="#">Services</a>
+									<ul>
+										<a href="data-center-consulting.html">Data Center Consulting</a>
+										<a href="cloud-consulting.html">Cloud Consulting</a>
+										<a href="it-transformation.html">IT Transformation</a>
+										<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+										<a href="network-collab.html">Network and Collaboration</a>
+										<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
+										<a href="end-user-computing.html">End User Computing</a>
+									</ul>
+								</li>
+								<li>
+									<a href="#">Solutions</a>
+									<ul>
+										<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
+										<a href="cyber-security-solutions.html">Cyber Security</a>
+										<a href="unified-workplace.html">Unified Workplace</a>
+									</ul>
+								</li>
+								<li><a href="products.html">Products</a></li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
+						</nav>
 				</section>
 
 				<section id="main">
@@ -433,11 +424,8 @@
 										<h2><b>Contact Us</b></h2>
 									</header>
 									<ul class="social">
-										<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
-										<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon fa-facebook" href="https://www.facebook.com/YISPL/"><span class="label">Facebook</span></a></li>
+										<li><a class="icon fa-linkedin" href="https://www.linkedin.com/company/yashasvi-information-solutions-pvt-ltd/?originalSubdomain=in"><span class="label">LinkedIn</span></a></li>
 									</ul>
 									<ul class="contact">
 										<li>
@@ -451,10 +439,16 @@
 										<li>
 											<h3><b>Mail</b></h3>
 											<p><b><a href="#">info@yashasvi.co.in</a></b></p>
+											<p><b><a href="#">sanjeev@yashasvi.co.in</a></b></p>
+											<p><b><a href="#">niladri@yashasvi.co.in</a></b></p>
+										</li>
+										<li>
+											<h3><b>Mobile</b></h3>
+											<p><b>+91 9845009026 / +91 9108995664</b></p>
 										</li>
 										<li>
 											<h3><b>Phone</b></h3>
-											<p><b>+91-9845009026</b></p>
+											<p><b>+91 080 2649 2692</b></p>
 										</li>
 									</ul>
 								</section>
