blinking text above footer

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Yashasvi Information Solutions</title>
+		<title>Yashasvi Information Solutions Pvt. Ltd.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/animate.css" />
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/flickity.css">
 
@@ -122,6 +123,7 @@
 										<header class="major">
 											<h2><b>Our Portfolio</b></h2>
 										</header>
+
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box" id="box">
@@ -177,6 +179,7 @@
 													</header>
 													<p><b>The objective of this service is to determine the “healthiness of the existing IT environment, recommend appropriate processes for service improvement and suggest areas for automation (if any)”.
 														The Scope of work for the IT infrastructure assessment is focused on the following operational towers (identified services/ functional areas).
+													<br><br>
 													</b></p>
 													<footer>
 														<div class="center">
@@ -194,9 +197,11 @@
 														<div class="center">
 															<h3><b>Network and Collaboration</b></h3>
 														</div>
+														<br>
 													</header>
-													<p><b>This service provides a complete blueprint of Network, Voice and Video infrastructure to organization that are building a new network or redesigning an existing Data and Voice infrastructure.
-														They work directly with your organization’s management and operations staffs to understand your network objectives in order to recommend industry best practices and the solutions and technologies that apply to your network environment.</b></p>
+													<p><b>We provide a complete blueprint of Network, Voice and Video infrastructure to companies that are building a new network or redesigning existing Data and Voice infrastructure.
+														We work directly with the organization’s management and operations staff to understand your network objectives and recommend industry best practices and the solutions and technologies that apply to your network environment.
+													</b></p>
 													<footer>
 														<div class="center">
 															<ul class="actions">
@@ -239,8 +244,8 @@
 													<p><b>
 														Yashasvi understands the high costs and challenges of safeguarding today’s complex and rapidly changing IT environment.
 														Digital transformation and Cloud are pushing security perimeters off premises, into the cloud, and into the workplace.
-														Enforcement of security policies have become more complex and requires understanding of risk and balancing the innovation.
-														Areas of expertise: Enterprise Security, Data Security, Emerging Security.
+														Enforcement of security policies are more complex and requires understanding of risk and balancing the innovation.
+														Expertise: Enterprise, Data, Emerging Security.
 													</b></p>
 													<footer>
 														<div class="center">
@@ -254,6 +259,7 @@
 										</div>
 									</section>
 							</div>
+
 							<div class="col-12">
 								<div class="center">
 									<p><b>Our OEMs:</b></p>
@@ -282,7 +288,7 @@
 									<img src="assets/css/images/partners/hitachi.png" alt="Hitachi" />
 								</div>
 								<div class="carousel-cell">
-									<img src="assets/css/images/partners/acronis2.jpg" alt="Acronis" />
+									<img src="assets/css/images/partners/acronis.jpg" alt="Acronis" />
 								</div>
 								<div class="carousel-cell">
 									<img src="assets/css/images/partners/cisco.png" alt="Cisco" />
@@ -337,87 +343,15 @@
 								</div>
 								</div>
 					</div>
-							<!-- <div class="col-12">
-								<div class="center">
-									<p><b>Clientele:</b></p>
-								</div>
-								<div class="carousel"
-								data-flickity='{ "imagesLoaded": true, "percentPosition": false, "autoPlay": 1000, "wrapAround": true }'>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/tenova.jpg" alt="Tenova" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/harman.png" alt="Harman International" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/faiveley.png" alt="Faiveley" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/safran.jpg" alt="Safran" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/comsol.png" alt="Comsol" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/minjar.png" alt="Minjar" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/hical.jpg" alt="Hical" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/intuit.jpg" alt="Intuit" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/karle.png" alt="Karle Infra" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/cosma.jpg" alt="Cosma" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/lumiplan.png" alt="Lumiplan" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/randox.jpg" alt="Randox Lab" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/herman.png" alt="Herman Miller" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/cgi.jpg" alt="CGI" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/ansaldo.png" alt="Ansaldo" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/rsam.jpg" alt="Rsam" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/quest.jpg" alt="Quest" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/cisco.png" alt="Cisco" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/amber.png" alt="Amberroad" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/cisco.png" alt="Cisco" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/austin.png" alt="Austin Med" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/bharadwaj.jpg" alt="Bharadwaj Pharma" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/spirent.jpg" alt="Spirent" />
-								</div>
-								<div class="carousel-cell">
-									<img src="assets/css/images/clients/fortigo.png" alt="Fortigo" />
-								</div>
-								</div> -->
 					</div>
 				</div>
+
+				</section>
+				<section>
+					<div class="blinker">
+						<img src="images/cloud-animate.png" alt="cloud-animation image" height="50" width="50" />
+						<a href="contact.html" class="alert" target="_blank">Click here to get a call back!</a>
+					</div>
 				</section>
 
 				<section id="footer">
