--- a/network-collab.html
+++ b/network-collab.html
@@ -169,7 +169,7 @@
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
-										<h2>Quick Links</h2>
+										<h2><b>Quick Links</b></h2>
 									</header>
 									<br>
 									<ul>
