--- a/brocade.html
+++ b/brocade.html
@@ -35,7 +35,7 @@
 									<a href="unified-workplace.html">Unified Workplace</a>
 								</ul>
 							</li>
-							<li><a href="products.html">Products</a></li>
+							<li><a href="products.html">Partners</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
