--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,9 @@
 		<nav id="nav">
 			<ul>
 				<li class="current"><a href="index.html">Home</a></li>
-				<li><a href="products.html">Products</a></li>
+				<li><a href="products.html">Partners</a></li>
 				<li><a href="contact.html">Contact</a></li>
+				<li><a href="promotions.html">Promotions</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -64,6 +65,12 @@
 
 	<input type="text" name="entry.1547617845" value="" class="ss-q-short" id="entry_1547617845" dir="auto" aria-label="Subject of query:  " aria-required="true" required="" title="">
 	<div class="error-message" id="380146084_errorMessage"></div>
+
+	<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+	<label class="ss-q-item-label" for="entry_1053728972"><div class="ss-q-title">Promo Code:
+	</div>
+	<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+	<input type="text" name="entry.1053728972" value="" class="ss-q-short" id="entry_1053728972" dir="auto" aria-label="Promo Code  " title="">
 
 	</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 	<div dir="auto" class="ss-item ss-item-required ss-paragraph-text"><div class="ss-form-entry">
