--- a/microsoft.html
+++ b/microsoft.html
@@ -7,6 +7,7 @@
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
@@ -35,8 +36,9 @@
 									<a href="unified-workplace.html">Unified Workplace</a>
 								</ul>
 							</li>
-							<li><a href="products.html">Products</a></li>
+							<li><a href="products.html">Partners</a></li>
 							<li><a href="contact.html">Contact</a></li>
+							<li><a href="promotions.html">Promotions</a></li>
 						</ul>
 					</nav>
 
