--- a/network-collab.html
+++ b/network-collab.html
@@ -35,8 +35,9 @@
 									<a href="unified-workplace.html">Unified Workplace</a>
 								</ul>
 							</li>
-							<li><a href="products.html">Products</a></li>
+							<li><a href="products.html">Partners</a></li>
 							<li><a href="contact.html">Contact</a></li>
+							<li><a href="promotions.html">Promotions</a></li>
 						</ul>
 					</nav>
 
@@ -216,18 +217,20 @@
 									</ul>
 								</section>
 							</div>
+
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2><b>More about Yashasvi?</b></h2>
+										<h2><b>Yashasvi in the News?</b></h2>
 									</header>
 									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 									<p><b>
-											This is some placeholder content.
+										Yashasvi Information Solutions Pvt. Ltd. was featured in <i>Silicon India</i> magazine's 10 most promising
+										Cisco service providers. To read more, follow the link below:
 									</b></p>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
+											<li><a href="https://technology.siliconindiamagazine.com/ranking/10-most-promising-cisco-sservice-providers–-2017-rid-187.html" class="button"><b>Cisco Top 10 - Yashasvi</b></a></li>
 										</ul>
 									</footer>
 								</section>
