--- a/data-center-consulting.html
+++ b/data-center-consulting.html
@@ -36,8 +36,9 @@
 									<a href="unified-workplace.html">Unified Workplace</a>
 								</ul>
 							</li>
-							<li><a href="products.html">Products</a></li>
+							<li><a href="products.html">Partners</a></li>
 							<li><a href="contact.html">Contact</a></li>
+							<li><a href="promotions.html">Promotions</a></li>
 						</ul>
 					</nav>
 
