--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 		<link rel="stylesheet" href="assets/css/flickity-responsive.css" />
 
 		<script src="assets/js/flickity.pkgd.min.js"></script>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121649854-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-121649854-1');
+		</script>
 	</head>
 
 	<body class="homepage is-preload">
@@ -49,8 +59,10 @@
 										<a href="unified-workplace.html">Unified Workplace</a>
 									</ul>
 								</li>
-								<li><a href="products.html">Products</a></li>
+								<li><a href="products.html">Partners</a></li>
 								<li><a href="contact.html">Contact</a></li>
+								<!-- <li><a href="analytics.html" target="_blank">Analytics</a></li> -->
+								<li><a href="promotions.html">Promotions</a></li>
 							</ul>
 						</nav>
 
@@ -262,7 +274,7 @@
 
 							<div class="col-12">
 								<div class="center">
-									<p><b>Our OEMs:</b></p>
+									<p><b>Our OEMs*:</b></p>
 								</div>
 								<div class="carousel"
 								data-flickity='{ "imagesLoaded": true, "percentPosition": false, "autoPlay": 1000, "wrapAround": true }'>
@@ -367,6 +379,7 @@
 											<span class="date"><strong># 1</strong></span>
 											<h3><b><a href="terms-of-use.html" target="_blank">Terms of Use</a></b></h3>
 											<p><b><i>Links to other websites, Termination, Governing Laws.</i></b></p>
+											<p><b><i>* logos of OEMs are trademarks of respective companies.</i></b></p>
 										</li>
 										<li>
 											<span class="date"><strong># 2</strong></span>
@@ -403,13 +416,14 @@
 							</div>
 
 							<div class="col-4 col-12-medium">
-								<section>
+								<section id="social">
 									<header>
 										<h2><b>Contact Us</b></h2>
 									</header>
 									<ul class="social">
 										<li><a class="icon fa-facebook" href="https://www.facebook.com/YISPL/"><span class="label">Facebook</span></a></li>
 										<li><a class="icon fa-linkedin" href="https://www.linkedin.com/company/yashasvi-information-solutions-pvt-ltd/?originalSubdomain=in"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon fa-twitter" href="https://twitter.com/yashasvi_info"><span class="label">LinkedIn</span></a></li>
 									</ul>
 									<ul class="contact">
 										<li>
